// QR Restaurante - Schema de Base de Datos

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

// Cliente - Usuario que escanea QR y hace pedidos
model Cliente {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String
  nombre    String
  telefono  String?
  role      String   @default("CLIENTE")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  refreshTokens RefreshToken[]
  visitas       Visita[]
  valoraciones  Valoracion[]

  @@map("clientes")
}

// Restaurante - Dueño de restaurant que gestiona menús y pedidos
model Restaurante {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String
  nombre    String
  direccion String
  telefono  String
  horarios  String?

  // Información del establecimiento
  tipoCocina      String  @default("")
  capacidadMaxima Int     @default(0)
  horarioApertura String?
  horarioCierre   String?
  latitud         Float?
  longitud        Float?

  qrCode    String   @unique
  role      String   @default("RESTAURANTE")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  refreshTokens RefreshToken[]
  codigosQR     CodigoQR[]
  visitas       Visita[]
  valoraciones  Valoracion[]

  @@map("restaurantes")
}

// Administrador del sistema
model Administrador {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String
  nombre    String
  role      String   @default("ADMIN")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  refreshTokens RefreshToken[]

  @@map("administradores")
}

// CodigoQR - Códigos QR generados por restaurantes para mesas/accesos
model CodigoQR {
  uuid            String   @id
  idMesa          String
  activo          Boolean  @default(true)
  fechaCreacion   DateTime @default(now())
  fechaExpiracion DateTime?

  restauranteId String
  restaurante   Restaurante @relation(fields: [restauranteId], references: [id], onDelete: Cascade)

  visitas Visita[]

  @@map("codigos_qr")
}

// Visita - Registro de entrada/salida de clientes en restaurantes
model Visita {
  id               String   @id @default(cuid())
  timestampEntrada DateTime @default(now())
  timestampSalida  DateTime?
  duracionMinutos  Int?
  estado           String   @default("activa")
  acompanantes     Int      @default(0)

  restauranteId String
  restaurante   Restaurante @relation(fields: [restauranteId], references: [id], onDelete: Cascade)

  clienteId String
  cliente   Cliente @relation(fields: [clienteId], references: [id], onDelete: Cascade)

  codigoQRId String
  codigoQR   CodigoQR @relation(fields: [codigoQRId], references: [uuid], onDelete: Cascade)

  @@map("visitas")
}

// Valoracion - Puntuación y comentario de cliente a restaurante
model Valoracion {
  id         String   @id @default(cuid())
  puntuacion Int
  comentario String?
  timestamp  DateTime @default(now())

  restauranteId String
  restaurante   Restaurante @relation(fields: [restauranteId], references: [id], onDelete: Cascade)

  clienteId String
  cliente   Cliente @relation(fields: [clienteId], references: [id], onDelete: Cascade)

  @@unique([clienteId, restauranteId], name: "una_valoracion_por_cliente_restaurante")
  @@map("valoraciones")
}

// Refresh Tokens
model RefreshToken {
  id        String   @id @default(cuid())
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())
  revoked   Boolean  @default(false)

  clienteId       String?
  restauranteId   String?
  administradorId String?

  cliente       Cliente?       @relation(fields: [clienteId], references: [id], onDelete: Cascade)
  restaurante   Restaurante?   @relation(fields: [restauranteId], references: [id], onDelete: Cascade)
  administrador Administrador? @relation(fields: [administradorId], references: [id], onDelete: Cascade)

  @@map("refresh_tokens")
}
