classDiagram
    %% ──────────────────────────────────────────────
    %% Modelo de Contenido — QR Restaurante
    %% UWE: Diagrama de Clases con 6 entidades
    %% ──────────────────────────────────────────────

    class Restaurante {
        +String id
        +String nombre
        +String direccion
        +String tipoCocina
        +Int capacidadMaxima
        +String horarioApertura
        +String horarioCierre
        +Float latitud
        +Float longitud
        +String telefono
        +String email
        +String contrasenaHash
        +DateTime createdAt
        +DateTime updatedAt
        +registrar()
        +actualizarPerfil()
        +gestionarQR()
    }

    class Cliente {
        +String id
        +String nombre
        +String email
        +String contrasenaHash
        +String telefono
        +DateTime createdAt
        +DateTime updatedAt
        +registrarse()
        +iniciarSesion()
        +valorarRestaurante()
    }

    class Visita {
        +String id
        +DateTime timestampEntrada
        +DateTime timestampSalida
        +Int duracionMinutos
        +String estado
        +Int acompanantes
        +registrarEntrada()
        +registrarSalida()
        +calcularDuracion()
    }

    class CodigoQR {
        +String uuid
        +String idMesa
        +Boolean activo
        +DateTime fechaCreacion
        +DateTime fechaExpiracion
        +generarQR()
        +desactivarQR()
        +validarQR()
    }

    class Valoracion {
        +String id
        +Int puntuacion
        +String comentario
        +DateTime timestamp
        +crearValoracion()
        +calcularMedia()
    }

    class Administrador {
        +String id
        +String nombre
        +String email
        +String contrasenaHash
        +String rol
        +DateTime createdAt
        +DateTime updatedAt
        +gestionarUsuarios()
        +generarReportes()
    }

    Restaurante "1" --> "*" CodigoQR : genera
    Restaurante "1" --> "*" Visita : recibe
    Restaurante "1" --> "*" Valoracion : es valorado
    Cliente "1" --> "*" Visita : realiza
    Cliente "1" --> "*" Valoracion : escribe
    CodigoQR "1" --> "*" Visita : registra
    Administrador "1" --> "*" Restaurante : gestiona
